Fixing styles to remove whitespace.

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -302,7 +302,7 @@ ul.in-testimonials
   background-position: top center
 
 .in-quote
-  width: 950px
+  width: 630px
   height: 320px
   margin: 0px auto
   padding-top: 35px
@@ -401,7 +401,7 @@ ul.in-testimonials
 
 #ge-footer-container
   width: 100%
-  height: 208px
+  height: 100px
   margin: 0px auto
   background-color: #35383c
   background-image: image-url("ge-footer-background.gif")
@@ -410,9 +410,7 @@ ul.in-testimonials
 
 .ge-footer
   width: 950px
-  height: 178px
   margin: 0px auto
-  padding-top: 30px
 
 .ge-calltoaction
   width: 790px
@@ -457,8 +455,7 @@ ul.in-testimonials
   height: 80px
   position: relative
   float: left
-  border-top: 1px solid #45494d
-  margin-top: 32px
+  margin-top: 16px
 
 ul.copyright
   position: relative
